# uoft_task

./: .gitignore  .tags  .travis.yml  CMakeLists.txt  README.md
include/solver/: base_solver.h  simple_solver.h  sparse_parallel_solver.h  sparse_solver.h
include/storage/: base_storage_format.h  csc_storage_format.h  mtx_vector.h
include/utils/: colors.h
src/: main.cpp  mtx_matrix.cpp  mtx_matrix.h  mtx_reader.cpp  mtx_reader.h  mtx_vector.cpp  mtx_vector.h
src/mtx/: base_storage_format.h  csc_format.h  mtx.h  mtx_matrix.cpp  mtx_matrix.h  mtx_vector.h
src/solver/: base_solver.h  simple_solver.cpp  sparse_parallel_solver.cpp  sparse_solver.cpp  sparse_solver.h
src/storage/: base_storage_format.h  csc_storage_format.h  mtx_matrix.cpp  mtx_matrix.h  mtx_vector.cpp  mtx_vector.h
src/utils/: dfs.cpp  dfs.h
tests/: CMakeLists.txt  dfs_test.cpp  main.cpp  main_test.cpp  mtx_matrix_test.cpp  mtx_vector_test.cpp
tests/data/: L.mtx  L_dense_double_01.mtx  L_dense_int_01.mtx  L_sparse_int_01.mtx  b.mtx  b_dense_double_01.mtx  b_dense_int_01.mtx  b_sparse_int_01.mtx
tests/lib/googletest-release-1.8.1/: CMakeCache.txt
tests/lib/googletest-release-1.8.1/googlemock/: CMakeLists.txt
tests/lib/googletest-release-1.8.1/googlemock/include/gmock/: gmock-actions.h  gmock-generated-actions.h  gmock-generated-function-mockers.h  gmock-generated-matchers.h  gmock-generated-nice-strict.h  gmock-matchers.h  gmock-more-actions.h  gmock-spec-builders.h
tests/lib/googletest-release-1.8.1/googlemock/src/: gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
tests/lib/googletest-release-1.8.1/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-internal-utils_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc  gmock_stress_test.cc  gmock_test.cc
tests/lib/googletest-release-1.8.1/googletest/include/gtest/internal/: gtest-internal.h  gtest-port.h
tests/lib/googletest-release-1.8.1/googletest/make/: sample1_unittest
tests/lib/googletest-release-1.8.1/googletest/mybuild/: CMakeCache.txt
tests/lib/googletest-release-1.8.1/googletest/samples/: sample10_unittest.cc  sample2.cc  sample2.h  sample2_unittest.cc  sample3-inl.h  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
tests/lib/googletest-release-1.8.1/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc
tests/lib/googletest-release-1.8.1/googletest/test/: googletest-env-var-test.py  googletest-filter-unittest.py  googletest-json-outfiles-test.py  googletest-output-test.py  googletest-throw-on-failure-test.py  gtest_xml_outfiles_test.py
tests/solver_tests/: CMakeLists.txt  solver_simple_test.cpp  sparse_parallel_solver_test.cpp  sparse_solver_test.cpp
